se actualiza opcion seleccionar nombre

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         <div class="mb-20">
             <label>Configurador:</label>
             <select id="configurator" required>
+                <option value="" disabled selected>Seleccione nombre</option>
                 <option value="opcion1">Kevin David Montoya Rivera</option>
                 <option value="opcion2">Janeth Patricia David</option>
                 <option value="opcion3">Reinel Villegas Calderón</option>
