--- a/index.html
+++ b/index.html
@@ -301,18 +301,18 @@
             const date = document.getElementById('date').value;
             const configurator = document.getElementById('configurator').value;
 
-            const items = Array.from(document.querySelectorAll('#equipment-rows .row')).map(row => ({
-                equipment: row.querySelector('[name="equipment"]').value,
-                equipmentType: row.querySelector('[name="equipmentType"]').value,
-                quantity: row.querySelector('[name="quantity"]').value,
-                status: row.querySelector('.status').value,
+            const items = Array.from(document.querySelectorAll('#equipment-rows .row')).map((row, index) => ({
+                equipment: row.querySelector(`[name="equipment${index+1}"]`).value,
+                equipmentType: row.querySelector(`[name="equipmentType${index+1}"]`).value,
+                quantity: row.querySelector(`[name="quantity${index+1}"]`).value,
+                status: row.querySelector(`[name="status${index+1}"]`).value,
             }));
 
-            console.log(items);
+            const coment = document.getElementById('coment').value;
 
             const response = await fetch('https://script.google.com/macros/s/AKfycbx54WAUV6Qqu0nvYPsdubW1rvuPLhrBucrOZ5O5TQiGJ0vrnKfVGD9VhjitFK8ugrVkzQ/exec', {
                 method: 'POST',
-                body: JSON.stringify({ date, configurator, items }),
+                body: JSON.stringify({ date, configurator, items, coment }),
             });
 
             const result = await response.json();
