--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
             const coment = document.getElementById('coment').value;
 
-            const response = await fetch('https://script.google.com/macros/s/AKfycbz-MNoXd0bdizJq5x1X7QbBq4XyqljyvTx88M-Ters-hImEcOJ6w1lbdnaEi3gMJmajXQ/exec', {
+            const response = await fetch('https://script.google.com/macros/s/AKfycbx-vhhMQlTpVhG2bXH8yvqQxLhDHnrl1XlgArDaXR2ocfIhD89XKM_kSKjORmEgKDblvw/exec', {
                 method: "POST",
                 redirect: "follow",
                 headers: { "Content-Type": "text/plain;charset=utf-8" },
@@ -319,7 +319,7 @@
 
             const result = await response.json();
             console.log(result);
-            if (result.success) {
+            if (result.status) {
                 alert('Datos enviados correctamente');
                 form.reset();
             } else {
